@@ -127,15 +127,22 @@ evfilt_socket_copyout(struct filter *filt,
             if (ev->events & EPOLLERR)
                 dst->fflags = 1; /* FIXME: Return the actual socket error */
           
-            /* On return, data contains the number of bytes of protocol
-               data available to read.
-             */
-            if (ioctl(dst->ident, 
-                        (dst->filter == EVFILT_READ) ? SIOCINQ : SIOCOUTQ, 
-                        &dst->data) < 0) {
-                /* race condition with socket close, so ignore this error */
-                dbg_puts("ioctl(2) of socket failed");
-                dst->data = 0;
+            if (kn->flags & KNFL_PASSIVE_SOCKET) {
+                /* On return, data contains the length of the 
+                   socket backlog. This is not available under Linux.
+                 */
+                dst->data = 1;
+            } else {
+                /* On return, data contains the number of bytes of protocol
+                   data available to read.
+                 */
+                if (ioctl(dst->ident, 
+                            (dst->filter == EVFILT_READ) ? SIOCINQ : SIOCOUTQ, 
+                            &dst->data) < 0) {
+                    /* race condition with socket close, so ignore this error */
+                    dbg_puts("ioctl(2) of socket failed");
+                    dst->data = 0;
+                }
             }
 
             if (kn->kev.flags & EV_DISPATCH) {
@@ -158,6 +165,9 @@ int
 evfilt_socket_knote_create(struct filter *filt, struct knote *kn)
 {
     struct epoll_event ev;
+
+    if (knote_get_socket_type(kn) < 0)
+        return (-1);
 
     /* Convert the kevent into an epoll_event */
     if (kn->kev.filter == EVFILT_READ)
